# statue

./: .markdownlint.json  Cargo.toml  README.md
.github/workflows/: jekyll-gh-pages.yml
docs/: .gitignore  book.toml
docs/book/: 404.html  chapter_1.html  intro.html  print.html  searchindex.js  searchindex.json
docs/src/: SUMMARY.md  intro.md  opportunities_for_improvement.md  repo_structure.md  supported_types.md
docs/src/examples/: hello_world_with_statue.md  hello_world_without_statue.md  index.md
docs/src/syntax/: elements_field.md  html_field.md  index.md  (+6 more)
src/: args.rs  elements.rs  lib.rs  selector.rs  selectors.rs
src/args/: mod.rs  opts.rs
src/extend_token_stream/: mod.rs
src/parse/: anon_sel_querry_impl.rs  anon_sel_query_impl.rs  anon_selector_impl.rs  args_impl.rs  comma_seped_parser.rs  error.rs  expl_kind_sel_querry_impl.rs  expl_kind_sel_query_impl.rs  expl_kind_selector_impl.rs  mod.rs  option_combinator.rs  opts_parser.rs  ret_ty_kind_impl.rs  sel_queries_impl.rs  sel_querries_impl.rs  sel_querry_brace_group_parser_impl.rs  sel_query_brace_group_parser_impl.rs  selector_brace_group_parser_impl.rs  selectors_impl.rs
src/sel_queries/: sel_query_kind.rs
src/sel_querries/: mod.rs  multi_sel_querries.rs  ret_ty_kind.rs  sel_syntax.rs  single_sel_querries.rs
src/selectors/: anon_selector.rs  expl_kind_selector.rs  impl_kind_selector.rs  mod.rs  multi_sel_querries.rs  multi_selectors.rs  sel_querry_kind.rs  selector_kind.rs  selector_syntax.rs  single_selectors.rs
statue/: Cargo.toml  README.md
statue/src/: elements.rs  util.rs
(+21 files in other folders)
