[package]
name = "statue"
version = "0.1.7"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.65.0" # identified by https://github.com/foresterre/cargo-msrv
description = "Easier way to query selectors for static HTML pages."
documentation = "https://docs.rs/statue"
readme = "README.md"
# homepage = ""
repository = "https://github.com/JohnScience/statue"
license = "MIT OR Apache-2.0"
# license-file = ""
keywords = ["html", "selector", "query", "css"]
categories = ["wasm", "web-programming"] # https://crates.io/category_slugs
# workspace = ""
# build = ""
# links = ""
# exclude = []
# include = []
# publish = []
# metadata = {}
# default-run = ""
# autobins = false
# autoexamples = false
# autotests = false
# autobenches = false
# resolver = ""

[dependencies]
tl = "0.7.7"

[lib]
proc-macro = true